--- a/_data/past.yml
+++ b/_data/past.yml
@@ -91,6 +91,7 @@
   dates: "June 13-15, 2023"
   url: https://openair.agiletestingdays.com?utm_source=testingconferences
   twitter: AgileTD
+  status: CFP is open until August 31, 2022
 
 - name: Software Quality Days 2022
   location: Vienna, Austria
