--- a/_data/current.yml
+++ b/_data/current.yml
@@ -221,8 +221,8 @@
   location: Potsdam, Germany
   dates: "November 21-24, 2022"
   url: https://agiletestingdays.com/?utm_source=testingconferences
-  twitter: AgileTD
-  status: Early Bird Registration is Open until September 18, 2022. 
+  twitter: AgileTDZone
+  status: Early Bird Registration is open until September 18, 2022. 
   
 - name: System Testing and Valdation (STV) Workshop 2022
   location: Guangzhou, China
@@ -247,8 +247,8 @@
   location: Cologne, Germany
   dates: "June 13-15, 2023"
   url: https://openair.agiletestingdays.com?utm_source=testingconferences
-  twitter: AgileTD
-  status: CFP is Open until August 31, 2022
+  twitter: AgileTDZone
+  status: CFP is open until August 31, 2022
 
 - name: EuroSTAR 2023 Software Testing Conference
   location: Antwerp, Belgium
