--- a/_data/past.yml
+++ b/_data/past.yml
@@ -72,9 +72,10 @@
 
 - name: Agile Testing Days (ATD) USA 2022
   location: Chicago, IL, USA
-  dates: "June 5-9, 2022"
+  dates: "May 22-24, 2023"
   url: https://agiletestingdays.us/?utm_source=testingconferences
-  twitter: AgileTDUSA
+  twitter: AgileTDZone
+  status: Call for Papers is open until September 30, 2022!
 
 - name: Nordic Testing Days (NTD) 2022
   location: Tallinn, Estonia
