--- a/_data/current.yml
+++ b/_data/current.yml
@@ -184,7 +184,7 @@
   location: Potsdam, Germany
   dates: "November 21-24, 2022"
   url: https://agiletestingdays.com/?utm_source=testingconferences
-  twitter: AgileTD
+  twitter: AgileTDZone
   status: Early Bird Registration is Open until September 18, 2022
 
 - name: OnlineTestConf 2022
@@ -259,7 +259,7 @@
   location: Cologne, Germany
   dates: "June 13-15, 2023"
   url: https://openair.agiletestingdays.com?utm_source=testingconferences
-  twitter: AgileTD
+  twitter: AgileTDZone
   status: CFP is Open until August 31, 2022
 
 - name: EuroSTAR 2023 Software Testing Conference
