--- a/_data/current.yml
+++ b/_data/current.yml
@@ -186,6 +186,13 @@
   url: https://agiletestingdays.com/?utm_source=testingconferences
   twitter: AgileTD
   status: Early Bird Registration is Open until September 18, 2022
+  
+  name: AgileTD Virtual 
+  location: Online
+  dates: "November 21-24, 2022"
+  url: https://bit.ly/3BW1ODC
+  twitter: AgileTDZone
+  status: AgileTD Virtual Pass available for € 399!
 
 - name: OnlineTestConf 2022
   location: Online
